# jobmatching-rust

./: Cargo.toml
resources/: config.json
src/: main.rs
src/collections/: capped_heap.rs  mod.rs
src/collections/tests/: capped_heap.rs  mod.rs
src/domain/: config.rs
src/dto/: mod.rs
src/engine/: available_on_start_day.rs  can_drive.rs  config.rs  distance.rs  job_location.rs  job_positons.rs  match_rating.rs  mod.rs  pay_rate.rs  required_certificates.rs
src/errors/: bad_request.rs  mod.rs  server.rs
src/repositories/: rest.rs
src/routes/: config.rs  find_jobs.rs  find_workers.rs  health.rs  mod.rs
src/services/: config.rs  job_match.rs  mod.rs  rules.rs  worker_match.rs
