[package]
name = "jobmatching-rust"
version = "0.1.0"
authors = ["aaron"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
reqwest = { version = "0.10", features = ["json"] }
async-trait = "0.1.41"
log = "0.4"
simple_logger = "1.11.0"
